# agent-harness-evals

./: .gitignore  README.md  justfile
.pi/reviews/: 2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v1.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v10.md  (+6 more)
.pi/specs/: 2026-04-28-bootstrap-fixture-design.md  (+3 more)
cases/: psf__requests-1921.failure_output.txt  psf__requests-1921.json  py-parse-duration-001.failure_output.txt  py-parse-duration-001.json  pytest-dev__pytest-7571.json
evals/: README.md  pyproject.toml
evals/evals/: campaign.py  cli.py  discovery.py  env.py  pipeline.py  report.py  runner.py  schemas.py  setup.py  workspace.py
evals/tests/: campaign_test.py  cli_test.py  conftest.py  discovery_test.py  env_test.py  pipeline_test.py  readme_test.py  report_test.py  runner_test.py  schemas_test.py  setup_test.py  workspace_test.py
evals/tests/fixtures/cases/: test-case-001.failure_output.txt  test-case-001.json
evals/tests/fixtures/cases/test-case-001/: pyproject.toml
evals/tests/fixtures/cases/test-case-001/test_case_001/: __init__.py
evals/tests/fixtures/cases/test-case-001/tests/: test_arith.py  test_arith_extended.py
evals/tests/fixtures/fake-framework/: manifest.json  run.py
evals/tests/integration/: test_eval_all_stub.py  test_pytest_fixture.py
fixtures/parse_duration/: README.md  pyproject.toml
fixtures/parse_duration/tests/: test_parse_duration.py  test_parse_duration_extended.py
fixtures/psf__requests-1921/: pyproject.toml
frameworks/: README.md
shared/: contract.md  task-spec.md
(+26 files in other folders)
