[project]
name = "evals"
version = "0.0.0"
description = "Framework-agnostic eval harness for the agent shootout"
requires-python = ">=3.11"
dependencies = [
  "pathspec>=0.12",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[tool.pytest.ini_options]
markers = ["integration: end-to-end with uv/network; slower"]
testpaths = ["tests"]
