[project]
name = "parse-duration-fixture"
version = "0.0.0"
description = "Parse human-readable duration strings (5s, 10m, 1h) into integer seconds"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parse_duration"]
