[project]
name = "requests-fixture"
version = "0.0.0"
description = "SWE-bench Verified instance psf__requests-1921 — fixture for urban-winner shootout"
requires-python = ">=3.9,<3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["requests"]
